--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,5 @@
-annotated-types==0.7.0
-anyio==4.9.0
-fastapi==0.115.12
-idna==3.10
-pydantic==2.11.4
-pydantic-core==2.33.2
-sniffio==1.3.1
-starlette==0.46.2
-typing-extensions==4.13.2
-typing-inspection==0.4.0
+asgiref==3.8.1
+django==5.2.1
+gunicorn==23.0.0
+packaging==25.0
+sqlparse==0.5.3
