--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,8 @@ readme = "README.md"
 requires-python = ">=3.11.11"
 dependencies = [
     "django>=5.2.1",
+    "django-jazzmin>=3.0.1",
     "gunicorn>=23.0.0",
+    "psycopg[binary]>=3.2.9",
+    "ruff>=0.11.9",
 ]
