--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
 asgiref==3.8.1
 django==5.2.1
+django-jazzmin==3.0.1
 gunicorn==23.0.0
 packaging==25.0
+psycopg==3.2.9
+psycopg-binary==3.2.9
+ruff==0.11.9
 sqlparse==0.5.3
+typing-extensions==4.13.2
