--- a/src/.env
+++ b/src/.env
@@ -1,5 +1,6 @@
 DB_USERNAME=lpproying
 DB_PASSWORD=lpproying
-DB_PORT=16479
+DB_PORT=19133
 DB_NAME=lpproying
 DB_HOST=0.tcp.sa.ngrok.io
+ALLOWED_HOSTS=localhost
