--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,10 @@ readme = "README.md"
 requires-python = ">=3.11.11"
 dependencies = [
     "django>=5.2.1",
+    "django-admin-rangefilter>=0.13.2",
     "django-jazzmin>=3.0.1",
     "gunicorn>=23.0.0",
+    "openpyxl>=3.1.5",
     "psycopg[binary]>=3.2.9",
     "ruff>=0.11.9",
 ]
