--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
 asgiref==3.8.1
 django==5.2.1
+django-admin-rangefilter==0.13.2
 django-jazzmin==3.0.1
+et-xmlfile==2.0.0
 gunicorn==23.0.0
+openpyxl==3.1.5
 packaging==25.0
 psycopg==3.2.9
 psycopg-binary==3.2.9
 ruff==0.11.9
 sqlparse==0.5.3
 typing-extensions==4.13.2
+whitenoise==6.9.0
