--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,23 @@
 asgiref==3.8.1
+boto3==1.38.41
+botocore==1.38.41
 django==5.2.1
 django-admin-rangefilter==0.13.2
 django-jazzmin==3.0.1
+django-storages==1.14.6
 et-xmlfile==2.0.0
 gunicorn==23.0.0
+jmespath==1.0.1
 openpyxl==3.1.5
 packaging==25.0
+pillow==11.2.1
 psycopg==3.2.9
 psycopg-binary==3.2.9
+python-dateutil==2.9.0.post0
 ruff==0.11.9
+s3transfer==0.13.0
+six==1.17.0
 sqlparse==0.5.3
 typing-extensions==4.13.2
+urllib3==2.5.0
 whitenoise==6.9.0
